--- a/program/02.python/01.python基础/18.Django/05.装饰器/01.Django中六个常用的自定义装饰器.md
+++ b/program/02.python/01.python基础/18.Django/05.装饰器/01.Django中六个常用的自定义装饰器.md
@@ -1,6 +1,6 @@
 Django中六个常用的自定义装饰器 - j_hao104 - 博客园 https://www.cnblogs.com/jhao/p/9258892.html
 
-目录
+# 1. 目录
 
 装饰器作用
 Django装饰器
@@ -15,7 +15,8 @@ Time it
 正文
 
 回到顶部
-装饰器作用
+
+# 2. 装饰器作用
 decorator是当今最流行的设计模式之一，很多使用它的人并不知道它是一种设计模式。这种模式有什么特别之处? 有兴趣可以看看Python Wiki上例子，使用它可以很方便地修改对象行为，通过使用类似例中的接口将修改动作封装在装饰对象中。
 
 decorator 可以动态地修改函数、方法或类的功能，而无需创建子类或修改类的源代码。正因为如此，装饰器可以让代码将变得更干净、更可读、更可维护(这很重要!)，并且减少了许多冗余但又不得不写的代码，使我们可以使用单个方法向多个类添加功能。
@@ -35,9 +36,10 @@ def my_view(request):
 Django装饰器
 下面介绍一些个人认为比较有用的，或者是之前使用过的具有积极效果的装饰器。事先声明，如要实现同样的业务场景，并不是只有本文中的方法。Django可以实现各种各样的装饰器，这完全根据您的需要进行定制。
 
-Group Required
+# 3. Group Required
 有时需要保护一些视图，只允许某些用户组访问。这时就可以使用下面的装饰器来检查用户是否属于该用户组。
 
+```py
 from django.contrib.auth.decorators import user_passes_test
 
 
@@ -56,11 +58,13 @@ def group_required(*group_names):
 @group_required('admins', 'seller')
 def my_view(request, pk):
     ...
+```
 有关此装饰器更多的介绍，可以参考这里。
 
-Anonymous required
+# 4. Anonymous required
 这个装饰器是参考Django自带的 login_required 装饰器，但是功能是相反的情况，即用户必须是未登录的，否则用户将被重定向到 settings.py 中定义的地址。当我们想要已登录的用户不允许进入某些视图(比如登录)时，非常有用。
 
+```py
 def anonymous_required(function=None, redirect_url=None):
 
    if not redirect_url:
@@ -80,11 +84,13 @@ def anonymous_required(function=None, redirect_url=None):
 @anonymous_required
 def my_view(request, pk):
     ...
+```
 有关此装饰器更多的介绍，可以参考这里。
 
-Superuser required
+# 5. Superuser required
 这个装饰器和上面的 group_required 类似， 但是它只允许超级用户才能访问视图。
 
+```py
 from django.core.exceptions import PermissionDenied
 
 
@@ -103,11 +109,13 @@ def superuser_only(function):
 @superuser_only
 def my_view(request):
     ...
+```
 有关此装饰器更多的介绍，可以参考这里。
 
-Ajax required
+# 6. Ajax required
 这个装饰器用于检查请求是否是AJAX请求，在使用jQuery等Javascript框架时，这是一个非常有用的装饰器，也是一种保护应用程序的好方法。
 
+```py
 from django.http import HttpResponseBadRequest
 
 
@@ -136,11 +144,13 @@ def ajax_required(f):
 @ajax_required
 def my_view(request):
     ...
+```
 有关此装饰器更多的介绍，可以参考这里。
 
-Time it
+# 7. Time it
 如果您需要改进某个视图的响应时间，或者只想知道运行需要多长时间，那么这个装饰器非常有用。
 
+```py
 def timeit(method):
 
    def timed(*args, **kw):
@@ -157,6 +167,7 @@ def timeit(method):
 @timeit
 def my_view(request):
     ...
+```
 有关此装饰器更多的介绍，可以参考这里。
 
 自定义功能
