--- a/program/02.python/01.python基础/18.Django/05.装饰器/01.Django中六个常用的自定义装饰器.md
+++ b/program/02.python/01.python基础/18.Django/05.装饰器/01.Django中六个常用的自定义装饰器.md
@@ -1,25 +1,26 @@
 Django中六个常用的自定义装饰器 - j_hao104 - 博客园 https://www.cnblogs.com/jhao/p/9258892.html
 
-# 1. 目录
 
-装饰器作用
-Django装饰器
-Group Required
-Anonymous required
-Superuser required
-Ajax required
-Time it
-自定义功能
- 
+<!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
 
-正文
+<!-- code_chunk_output -->
 
-回到顶部
+- [1. 装饰器作用](#1-装饰器作用)
+- [2. Login Required](#2-login-required)
+- [3. Group Required](#3-group-required)
+- [4. Anonymous required](#4-anonymous-required)
+- [5. Superuser required](#5-superuser-required)
+- [6. Ajax required](#6-ajax-required)
+- [7. Time it](#7-time-it)
 
-# 2. 装饰器作用
+<!-- /code_chunk_output -->
+
+# 1. 装饰器作用
 decorator是当今最流行的设计模式之一，很多使用它的人并不知道它是一种设计模式。这种模式有什么特别之处? 有兴趣可以看看Python Wiki上例子，使用它可以很方便地修改对象行为，通过使用类似例中的接口将修改动作封装在装饰对象中。
 
 decorator 可以动态地修改函数、方法或类的功能，而无需创建子类或修改类的源代码。正因为如此，装饰器可以让代码将变得更干净、更可读、更可维护(这很重要!)，并且减少了许多冗余但又不得不写的代码，使我们可以使用单个方法向多个类添加功能。
+
+# 2. Login Required
 
 对于装饰器的重用性和易用性，Django里面的@login_required就是一个很好的例子。使用它只用一句代码就可以检查用户是否通过身份验证，并将未登录用户重定向到登录url。
 
@@ -32,7 +33,6 @@ def my_view(request):
     ...
 每次用户试图访问 my_view 时，都会进入 login_required 中的代码。
 
-回到顶部
 Django装饰器
 下面介绍一些个人认为比较有用的，或者是之前使用过的具有积极效果的装饰器。事先声明，如要实现同样的业务场景，并不是只有本文中的方法。Django可以实现各种各样的装饰器，这完全根据您的需要进行定制。
 
@@ -60,6 +60,8 @@ def my_view(request, pk):
     ...
 ```
 有关此装饰器更多的介绍，可以参考这里。
+
+https://djangosnippets.org/snippets/1703/
 
 # 4. Anonymous required
 这个装饰器是参考Django自带的 login_required 装饰器，但是功能是相反的情况，即用户必须是未登录的，否则用户将被重定向到 settings.py 中定义的地址。当我们想要已登录的用户不允许进入某些视图(比如登录)时，非常有用。
