--- a/program/02.python/03.机器学习/15.文本分析/14.非结构转结构数据-Word2Vec/01.基于Gensim的Word2Vec实践.md
+++ b/program/02.python/03.机器学习/15.文本分析/14.非结构转结构数据-Word2Vec/01.基于Gensim的Word2Vec实践.md
@@ -31,28 +31,24 @@ Getting Started with Word2Vec and GloVe in Python
 Gensim中 Word2Vec 模型的期望输入是进过分词的句子列表，即是某个二维数组。这里我们暂时使用 Python 内置的数组，不过其在输入数据集较大的情况下会占用大量的 RAM。Gensim 本身只是要求能够迭代的有序句子列表，因此在工程实践中我们可以使用自定义的生成器，只在内存中保存单条语句。
 
 ```py
+# 例子1
 # 引入 word2vec
 from gensim.models import word2vec
-
 # 引入日志配置
 import logging
-
 logging.basicConfig(format='%(asctime)s : %(levelname)s : %(message)s', level=logging.INFO)
-
 # 引入数据集
 raw_sentences = ["the quick brown fox jumps over the lazy dogs","yoyoyo you go home now to sleep"]
-
 # 切分词汇
 # sentences= [s.encode('utf-8').split() for s in sentences]
 sentences= [s.split() for s in raw_sentences]
-
 # 构建模型
 model = word2vec.Word2Vec(sentences, min_count=1)
-
 # 进行相关性比较
 model.similarity('dogs','you')
 # -0.14555506
 
+# 例子2
 model = gensim.models.Word2Vec.load('fzhxx_model') #加载模型
 a = model.most_similar(positive=['积极词1','积极词2'],negative=['消极词1','消极词2'],topn=40)  #取最符合的40个词
 b = model.similarity('词1', '词2') #两个词的相似度
@@ -65,12 +61,28 @@ d = model['词汇名'] #词向量
 2. 而这两个步骤是可以分步进行的，这样对于某些不可重复的流（譬如 Kafka 等流式数据中）可以手动控制：
 
 ```py
-# 在线训练
+# 在线训练，分步训练
 # model = gensim.models.Word2Vec(iter=1)  # an empty model, no training yet
 model = word2vec.Word2Vec(iter=1)
 model.build_vocab(some_sentences)   # can be a non-repeatable, 1-pass generator
-model.train(other_sentences)    # can be a non-repeatable, 1-pass generator
+model.train(other_sentences)   # can be a non-repeatable, 1-pass generator
+
+from gensim.models import word2vec
+import logging
+logging.basicConfig(format='%(asctime)s : %(levelname)s : %(message)s', level=logging.INFO)
+raw_sentences = ["the quick brown fox jumps over the lazy dogs","yoyoyo you go home now to sleep"]
+sentences= [s.split() for s in raw_sentences]
+model = word2vec.Word2Vec(iter=1,min_count=1)
+model.build_vocab(sentences)
+model.train(sentences,total_examples=model.corpus_count, epochs=model.iter)
+model.similarity('dogs','you')
 ```
+
+# 1.1 报错：python 在训练word2vec模型时，弹出RuntimeError:you must first build vocabulary before training the model
+解决方法：
+训练语料不满足要求（词太少了， 没有达到默认的最少计数 mincount），换一个合适的语料或者改一下 min_count
+voc_vec = word2vec.Word2Vec(vocab, min_count=1)
+
 
 # 2. Word2Vec 参数
 1. min_count
@@ -167,6 +179,12 @@ sentences = MySentences('fzhxx_corpus.txt')
 # 4. 模型保存与读取
 
 ```py
+model.save('/tmp/MyModel')
+# 前一组方法保存的文件不能利用文本编辑器查看但是保存了训练的全部信息，可以在读取后追加训练
+model.save_word2vec_format('/tmp/mymodel.txt',binary = False)
+model.save_word2vec_format('/tmp/mymodel.bin.gz',binary = True)
+# 后一组方法保存为word2vec文本格式但是保存时丢失了词汇树等部分信息，不能追加训练
+
 model.save('text8.model')
 # 2015-02-24 11:19:26,059 : INFO : saving Word2Vec object under text8.model, separately None
 # 2015-02-24 11:19:26,060 : INFO : not storing attribute syn0norm
