--- a/program/02.python/01.python基础/18.Django/07.xadmin/01.xadmin.md
+++ b/program/02.python/01.python基础/18.Django/07.xadmin/01.xadmin.md
@@ -1,1 +1,3 @@
 1. https://github.com/sshwsfc/xadmin
+2. Django2.0.8+xadmin2实现在线学习网站 - 吾星喵 https://blog.starmeow.cn/feature/1/
+    1. Django在线学习平台 https://github.com/xyliurui/OnlineLearningPlatform
