--- a/program/02.python/03.机器学习/15.文本分析/18.情感分析/情感分析.md
+++ b/program/02.python/03.机器学习/15.文本分析/18.情感分析/情感分析.md
@@ -14,6 +14,10 @@
 9. https://github.com/chaoming0625/SentimentPolarityAnalysis （491）
 10. https://github.com/BUPTLdy/Sentiment-Analysis (241)
 11. https://github.com/aespresso/chinese_sentiment
+12. https://github.com/NLPIR-team/NLPIR java 2400+
+    1. https://github.com/NLPIR-team/NLPIR/tree/master/NLPIR%20SDK/SentimentAnalysis
+    2. https://github.com/NLPIR-team/SentimentAnalysis
+    3. 语义分析系统(包括情感分析 喜怒哀乐) http://ictclas.nlpir.org/nlpir/
 1. dutir
     1. https://github.com/hehuihui1994/EA
     2. https://github.com/hehuihui1994/emotion_classification_based_on_machine_learning (dutir 喜怒哀乐)
