--- a/program/02.python/03.机器学习/06.支持向量机SVM/02.支持向量机分类.md
+++ b/program/02.python/03.机器学习/06.支持向量机SVM/02.支持向量机分类.md
@@ -52,27 +52,55 @@ print(classification_report(y_test,y_predict,target_names=digits.target_names.as
 # weighted avg       0.95      0.95      0.95       450
 ```
 
-## 精准度和召回度
+# 2. 精准度和召回度
 
-精确度是“搜索结果有多大用处”，而召回是“结果如何完整”
-准确率（Precision）：P=TP/(TP+FP)。通俗地讲，就是预测正确的正例数据占预测为正例数据的比例。
-召回率（Recall）：R=TP/(TP+FN)。通俗地讲，就是预测为正例的数据占实际为正例数据的比例
+精确度是`搜索结果有多大用处`，而召回是`结果如何完整`
+1. 准确率（Precision）：P=TP/(TP+FP)。通俗地讲，就是预测正确的正例数据占预测为正例数据的比例。
+2. 召回率（Recall）：TPR(true positive rate) = TP/(TP+FN) = TP/P。通俗地讲，就是预测为正例的数据占实际为正例数据的比例
+3. FPR(false positive rate) = FP / (FP + TN) 表示当前被错误分到正样本类别中真实的负样本所占所有负样本总数的比例；
 
+概念：
+1. 真正TP, true positives, 实际是正例，预测为正例
+2. 伪反FN, false negatives, 实际为正例，预测为负例
+3. 伪正FP, false positives, 实际为负例，预测为正例
+4. 真反TN, true negatives, 实际为负例，预测为负例
+
+ROC:
+1. 对于ROC来说，横坐标就是FPR，而纵坐标就是TPR
+2. 因此可以想见，当 TPR越大，而FPR越小时，说明分类结果是较好的
+
+# 3. sklearn中的classification_report函数
+
+https://blog.csdn.net/akadiao/article/details/78788864
+
+sklearn中的classification_report函数用于显示主要分类指标的文本报告．在报告中显示每个类的精确度，召回率，F1值等信息。 主要参数: 
+1. y_true：1维数组，或标签指示器数组/稀疏矩阵，目标值。 
+2. y_pred：1维数组，或标签指示器数组/稀疏矩阵，分类器返回的估计值。 
+3. labels：array，shape = [n_labels]，报表中包含的标签索引的可选列表。 
+4. target_names：字符串列表，与标签匹配的可选显示名称（相同顺序）。 
+5. sample_weight：类似于shape = [n_samples]的数组，可选项，样本权重。 
+6. digits：int，输出浮点值的位数．
+
+
+classification_report用法示例：
 ```py
 from sklearn.metrics import classification_report
 y_true = [0, 1, 2, 2, 2]
 y_pred = [0, 0, 2, 2, 1]
-print(classification_report(y_true, y_pred))
-#               precision    recall  f1-score   support
-#
-#            0       0.50      1.00      0.67         1
-#            1       0.00      0.00      0.00         1
-#            2       1.00      0.67      0.80         3
-#
-#     accuracy                           0.60         5
-#    macro avg       0.50      0.56      0.49         5
-# weighted avg       0.70      0.60      0.61         5
+target_names = ['class 0', 'class 1', 'class 2']
+print(classification_report(y_true, y_pred, target_names=target_names))
+# 输出：
+#              precision    recall  f1-score   support
+#     class 0       0.50      1.00      0.67         1
+#     class 1       0.00      0.00      0.00         1
+#     class 2       1.00      0.67      0.80         3
+# avg / total       0.70      0.60      0.61         5
 ```
+结果：
+1. 其中列表左边的一列为分类的标签名，
+2. 右边support列为每个标签的出现次数
+3. avg / total行为各列的均值（support列为总和）． 
+4. precision recall f1-score三列分别为各个类别的精确度/召回率及 F1 F1值．
 
 
 # 参考
@@ -88,3 +116,6 @@ print(classification_report(y_true, y_pred))
 6. ModuleNotFoundError: No module named 'sklearn.cross_validation' - 不服输的南瓜的博客 - CSDN博客 https://blog.csdn.net/weixin_40283816/article/details/83242083
 7. 机器学习笔记－－classification_report&精确度/召回率/F1值 - akadiao的博客 - CSDN博客 https://blog.csdn.net/akadiao/article/details/78788864
 8. 准确率，召回率，F1 值、ROC，AUC、mse,mape评价指标 - 雪伦的专栏 - CSDN博客 https://blog.csdn.net/a819825294/article/details/51699211
+9. ROC、Precision、Recall、TPR、FPR理解 - 简书 https://www.jianshu.com/p/be2e037900a1
+10. 机器学习基础（1）- ROC曲线理解 - 简书 https://www.jianshu.com/p/2ca96fce7e81
+11. 机器学习笔记－－classification_report&精确度/召回率/F1值 - akadiao的博客 - CSDN博客 https://blog.csdn.net/akadiao/article/details/78788864
