--- a/program/02.python/03.机器学习/01.机器学习基础/01.机器学习的主要任务.md
+++ b/program/02.python/03.机器学习/01.机器学习基础/01.机器学习的主要任务.md
@@ -6,7 +6,7 @@
 2. 无监督学习Unsupervised Learning
     1. 数据降维Dimensionality。对事物的特性进行压缩和筛选
     2. 聚类问题Clustering。把相似的数据样本划分为一个簇
-3. 特征。通常把这些反映数据内在规律的信息叫做特征Feature
+3. 特征。通常把这些`反映数据内在规律的信息`叫做特征Feature
 4. 特征向量Feature Vector。用来描述一个数据样本
 5. 标记/目标的表现形式取决于监督学习的种类
 
