--- a/program/02.python/01.python基础/18.Django/06.后台管理/02.xadmin/14.xadmin2学生信息管理系统.md
+++ b/program/02.python/01.python基础/18.Django/06.后台管理/02.xadmin/14.xadmin2学生信息管理系统.md
@@ -1,17 +1,18 @@
 【Python3.6+Django2.0+Xadmin2.0系列教程之二（入门篇-中）】学生信息管理系统 - 纵世科技 - 博客园 https://www.cnblogs.com/v88v/p/8886764.html
+1. https://github.com/vip68/xadmin_bugfix
 
-一、创建模型
+
+# 一、创建模型
 
 模型是表示我们的数据库表或集合类，并且其中所述类的每个属性是表或集合的字段，在 app/models.py 中定义。
 
- 
-
 1、首先，导入models模块
+
 
 from django.db import models
 接下来创建个学生信息类，其中包含学生姓名、性别、年龄、入学时间、家庭住址等信息：
 
-复制代码
+```py
 class Students(models.Model):
     name = models.CharField(verbose_name='学生姓名', max_length=50)
     sex = models.CharField(verbose_name='性别', max_length=50)
@@ -19,22 +20,12 @@ class Students(models.Model):
     address = models.CharField(verbose_name='家庭住址', max_length=250, blank=True)
     enter_date = models.DateField(verbose_name='入学时间')
     remarks = models.TextField(verbose_name='备注', blank=True)
-复制代码
-在终端内执行这两个数据库修改同步的命令
-
-python3 manage.py makemigrations
-python3 manage.py migrate
+```
+python manage.py makemigrations
+python manage.py migrate
 
 
-现在看看数据库，已经有了这张我们已经创建好的表及相关字段：
-
-
-
-
-
- 
-
-2、创建好数据表之后，接下来要将数据模型展示到页面
+2. 创建好数据表之后，接下来要将数据模型展示到页面
 
 首先，将app/admin.py文件重命名为adminx.py，并导入模块
 
@@ -47,21 +38,14 @@ class StudentsAdmin(object):
 最后，对其进行注册：
 
 xadmin.site.register(Students, StudentsAdmin)
-来看看页面长得是这样子的：
 
-
-
-
-
- 
-
-3、本地化语言显示
+3. 本地化语言显示
 
 是否发现左侧栏目显示的还是Students，咦，不对，怎么会是Students呢？原因就在于，英文单词有单数和复数之分，左侧这一栏默认是以类名最后加's'作为复数显示的。那我们想要把它改为中文，要怎么做呢？接下来，就来操作：
 
 在models.py的Students类下添加类属性：
 
-复制代码
+```py
 class Students(models.Model):
     name = models.CharField(verbose_name='学生姓名', max_length=50)
     sex = models.CharField(verbose_name='性别', max_length=50)
@@ -76,12 +60,9 @@ class Students(models.Model):
 
     def __str__(self):
         return self.name
-复制代码
+```
 
-
- 
-
- 4、下拉选项
+4. 下拉选项
 
 到这里，我们会发现在添加学生信息的时候，其中有一个性别字段，每次都要手动输入“男”/“女”，要是弄成下拉选择框，那就省事了，有办法：
 
@@ -101,15 +82,22 @@ sex = models.CharField(verbose_name='性别', max_length=50)
 sex = models.CharField(choices=SEX, verbose_name='性别', max_length=50)
 同时，记得对模型的修改操作，凡是有涉及到数据库的，都要进行同步操作，运行命令：
 
-python3 manage.py makemigrations
-python3 manage.py migrate
-
-
- 
+python manage.py makemigrations
+python manage.py migrate
 
 *有了学生信息之后，还需要添加个学生所属的班级信息。同样的，在models.py里添加一个班级类：
 
-复制代码
+```py
+class Grade(models.Model):
+    grade_name = models.CharField(verbose_name='年级', max_length=100)
+
+    class Meta:
+        verbose_name = '年级'
+        verbose_name_plural = '年级'
+
+    def __str__(self):
+        return self.grade_name
+
 class Class(models.Model):
     class_name = models.CharField(verbose_name='班级', max_length=100)
 
@@ -119,23 +107,25 @@ class Class(models.Model):
 
     def __str__(self):
         return self.class_name
-复制代码
+```
 *注意，这两个类必须写在Students类的上面，否则无法被Students类识别
 
 还是一样，修改adminx.py，对这两个类进行注册和页面自定义展示操作：
 
+```py
 class ClassAdmin(object):
     list_display = ('class_name',)
 
-
 xadmin.site.register(Class, ClassAdmin)
 
+class GradeAdmin(object):
+    list_display = ('grade_name',)
 
- 
+xadmin.site.register(Grade, GradeAdmin)
+```
 
 这里我们先把班级信息给填写完整，之后需要对Students类关联这这两张表
 
- 
 
 *外键的操作：
 
@@ -150,14 +140,11 @@ xadmin.site.register(Class, ClassAdmin)
 python3 manage.py makemigrations
 python3 manage.py migrate
 
-
- 
-
 学生需要有他要学习的课程，现在我们就来创建课程的数据表，同样的需要写在学生表前面：
 
 models.py文件内添加：
 
-复制代码
+```py
 class Subjects(models.Model):
     name = models.CharField(verbose_name='课程名称', max_length=50, blank=True)
     score = models.IntegerField(verbose_name='学分', blank=True)
@@ -168,12 +155,11 @@ class Subjects(models.Model):
 
     def __str__(self):
         return self.name
-复制代码
+```
 adminx.py文件内添加：
 
 class SubjectsAdmin(object):
     list_display = ('name', 'score',)
-
 
 xadmin.site.register(Subjects, SubjectsAdmin)
  
@@ -187,10 +173,6 @@ xadmin.site.register(Subjects, SubjectsAdmin)
 subjects = models.ManyToManyField(Subjects, verbose_name='选修课程')
 同步一下数据库信息，方法前面提到，这里不再赘述。
 
-
-
- 
-
 我们看到的选修课程的选项似乎有点丑，而且一旦选择了就无法取消。这就需要对adminx.py进行修改，自定义显示风格：
 
 在StudentsAdmin内中添加一个内联复选框：
@@ -203,13 +185,12 @@ style_fields = {'subjects': 'checkbox-inline', }
 subjects = models.ManyToManyField(Subjects, verbose_name='选修课程', blank=True)
 （xadmin2.0貌似有个bug，这里本来应该显示横排的复选框，但是却显示成了竖着的，在Django1.x+xadmin0.6的组合里使用显示是正常的）
 
- 
 
 有了学生之后，我们再来创建教师信息表：
 
 models.py文件中加入：
 
-复制代码
+```py
 class Teachers(models.Model):
     name = models.CharField(verbose_name='教师姓名', max_length=50)
 
@@ -219,12 +200,11 @@ class Teachers(models.Model):
 
     def __str__(self):
         return self.name
-复制代码
+```
 adminx.py文件中加入：
 
 class TeachersAdmin(object):
     list_display = ('name',)
-
 
 xadmin.site.register(Teachers, TeachersAdmin)
 不要忘记了同步数据库。
@@ -241,10 +221,6 @@ headmaster = models.OneToOneField(Teachers, verbose_name='班主任', on_delete=
 这里的OneToOneField就是一对一关系了，执行数据库同步命令。
 
 现在在页面上的班级信息里选择班主任，一个班主任在被一个班级选定之后，其他班级是无法再选择的：
-
-
-
- 
 
 总结：
 
