--- a/program/02.python/01.python基础/18.Django/06.后台管理/02.xadmin/15.xadmin2基本配置.md
+++ b/program/02.python/01.python基础/18.Django/06.后台管理/02.xadmin/15.xadmin2基本配置.md
@@ -15,7 +15,7 @@ urlpatterns = [
 ] + static(settings.MEDIA_URL, document_root=settings.MEDIA_ROOT)
 然后在demo/settings.py文件中添加
 
-复制代码
+```py
 # 指定上传位置
 LOCATION = os.path.join('/', 'Users', 'babybus')
 # 媒体文件根目录
@@ -24,7 +24,7 @@ MEDIA_ROOT = os.path.join(LOCATION, 'Media')
 ROOT_URL = '/'
 
 MEDIA_URL = '/media/'
-复制代码
+```
  
 
 上传图片涉及到路径的获取，在models.py文件中导入os模块
@@ -83,6 +83,7 @@ list_filter = ('sex',)
 
 如果想让学生按某字段的顺序来排序，同样我们需要在adminx.py文件中的StudentsAdmin类中添加ordering选项：
 
+```py
 # 顺序排序
 ordering = ('age', 'name', )
 
@@ -91,16 +92,17 @@ ordering = ('age', 'name', )
 ordering = ('-age',)
 
 这表示同时按照年龄和姓名字段来排序。
+```
 
  
 
-二、定制网站信息
+# 二、定制网站信息
 
 我们希望登录网站的时候，显示站点的名称，修改adminx.py文件，添加LoginViewAdmin类，并注册：
 
  
 
-复制代码
+```py
 from xadmin.views.website import LoginView
 
 class LoginViewAdmin(LoginView):
@@ -108,22 +110,11 @@ class LoginViewAdmin(LoginView):
 
 
 xadmin.site.register(LoginView, LoginViewAdmin)
-复制代码
- 
-
- 
-
- 
-
- 
-
-
-
- 
+```
 
 还可以继续修改，例如浏览器标题和左上角的网页标题以及页脚的版权信息：
 
-复制代码
+```py
 from xadmin.views import CommAdminView
 class GlobalSetting(CommAdminView):
     # 左上角及浏览器标题
@@ -133,19 +124,14 @@ class GlobalSetting(CommAdminView):
 
 
 xadmin.site.register(CommAdminView, GlobalSetting)
-复制代码
- 
+```
 
-
-
- 
-
- 左侧边栏如果以后项目越来越多了，有一个归类会更好看些，也方便管理操作。这就需要在GlobalSetting类中添加
+左侧边栏如果以后项目越来越多了，有一个归类会更好看些，也方便管理操作。这就需要在GlobalSetting类中添加
 
 menu_style = 'accordion'
 
 
- 转载请注明出处：https://www.cnblogs.com/v88v/p/8909845.html
+转载请注明出处：https://www.cnblogs.com/v88v/p/8909845.html
 
  
 
