--- a/program/02.python/01.python基础/18.Django/07.RESTFramework/01.Django REST framework基础：认证、权限、限制.md
+++ b/program/02.python/01.python基础/18.Django/07.RESTFramework/01.Django REST framework基础：认证、权限、限制.md
@@ -1,6 +1,6 @@
 Django REST framework基础：认证、权限、限制 - Q1mi - 博客园 https://www.cnblogs.com/liwenzhou/p/9410737.html
 
-认证、权限和限制
+# 1. 认证、权限和限制
 身份验证是将传入请求与一组标识凭据（例如请求来自的用户或其签名的令牌）相关联的机制。然后 权限 和 限制 组件决定是否拒绝这个请求。
 
 简单来说就是：
@@ -11,16 +11,12 @@ Django REST framework基础：认证、权限、限制 - Q1mi - 博客园 https:
 
 限制确定你访问某个接口的频率
 
-认证
+# 2. 认证
 REST framework 提供了一些开箱即用的身份验证方案，并且还允许你实现自定义方案。
-
-
-
- 
 
 接下类我们就自己动手实现一个基于Token的认证方案：
 
-自定义Token认证
+# 3. 自定义Token认证
 表
 定义一个用户表和一个保存用户Token的表：
 
@@ -94,20 +90,25 @@ class MyAuth(BaseAuthentication):
             return None, None
 ```
 视图级别认证
+```py
 class CommentViewSet(ModelViewSet):
 
     queryset = models.Comment.objects.all()
     serializer_class = app01_serializers.CommentSerializer
     authentication_classes = [MyAuth, ]
+```
 全局级别认证
+```py
 # 在settings.py中配置
 REST_FRAMEWORK = {
     "DEFAULT_AUTHENTICATION_CLASSES": ["app01.utils.MyAuth", ]
 }
-权限
+```
+
+# 4. 权限
 只有VIP用户才能看的内容。
 
-自定义一个权限类
+## 4.1 自定义一个权限类
 ```py
 # 自定义权限
 class MyPermission(BasePermission):
@@ -123,23 +124,30 @@ class MyPermission(BasePermission):
         else:
             return False
 ```
-视图级别配置
+
+## 4.2 视图级别配置
+```py
 class CommentViewSet(ModelViewSet):
 
     queryset = models.Comment.objects.all()
     serializer_class = app01_serializers.CommentSerializer
     authentication_classes = [MyAuth, ]
     permission_classes = [MyPermission, ]
-全局级别设置
+```
+
+## 4.3 全局级别设置
+```py
 # 在settings.py中设置rest framework相关配置项
 REST_FRAMEWORK = {
     "DEFAULT_AUTHENTICATION_CLASSES": ["app01.utils.MyAuth", ],
     "DEFAULT_PERMISSION_CLASSES": ["app01.utils.MyPermission", ]
 }
-限制
+```
+
+# 5. 限制
 DRF内置了基本的限制类，首先我们自己动手写一个限制类，熟悉下限制组件的执行过程。
 
-自定义限制类
+## 5.1 自定义限制类
 ```py
 VISIT_RECORD = {}
 # 自定义限制
@@ -177,20 +185,26 @@ class MyThrottle(object):
 ```
  
 
-视图使用
+## 5.2 视图使用
+```py
 class CommentViewSet(ModelViewSet):
 
     queryset = models.Comment.objects.all()
     serializer_class = app01_serializers.CommentSerializer
     throttle_classes = [MyThrottle, ]
-全局使用
+```
+
+## 5.3 全局使用
+```py
 # 在settings.py中设置rest framework相关配置项
 REST_FRAMEWORK = {
     "DEFAULT_AUTHENTICATION_CLASSES": ["app01.utils.MyAuth", ],
     "DEFAULT_PERMISSION_CLASSES": ["app01.utils.MyPermission", ]
     "DEFAULT_THROTTLE_CLASSES": ["app01.utils.MyThrottle", ]
 }
-使用内置限制类
+```
+
+# 6. 使用内置限制类
 ```py
 from rest_framework.throttling import SimpleRateThrottle
 
@@ -203,7 +217,7 @@ class VisitThrottle(SimpleRateThrottle):
         return self.get_ident(request)
 ```
 全局配置
-```
+```py
 # 在settings.py中设置rest framework相关配置项
 REST_FRAMEWORK = {
     "DEFAULT_AUTHENTICATION_CLASSES": ["app01.utils.MyAuth", ],
