--- a/program/02.python/01.python基础/18.Django/02.models.Model/18.12.Django常用的QuerySet操作.md
+++ b/program/02.python/01.python基础/18.Django/02.models.Model/18.12.Django常用的QuerySet操作.md
@@ -23,10 +23,12 @@ none
 get
 比如Post.objects.get(id=1)用于查询id为1的文章：如果存在，则直接返回对应的Post实例；如果不存在，则抛出DoesNotExist异常。所以一般情况下，要使用异常捕获处理：
 
-1 try:
-2     post = Post.objects.get(id=1)
-3 except Post.DoesNotExist:
-4 #做异常情况处理
+```
+try:
+    post = Post.objects.get(id=1)
+except Post.DoesNotExist:
+```
+#做异常情况处理
 create
 用来直接创建一个Model对象，比如post = Post.objects.create(title="一起学习")。
 
