--- a/program/02.python/01.python基础/18.Django/08.用户权限/03.Django扩展Auth-User表的几种方法.md
+++ b/program/02.python/01.python基础/18.Django/08.用户权限/03.Django扩展Auth-User表的几种方法.md
@@ -1,6 +1,6 @@
 Django扩展Auth-User表的几种方法 - 檐夏 - 博客园 https://www.cnblogs.com/yxi-liu/p/8684504.html
 
-方式1， OneToOneField
+# 方式1， OneToOneField
 
 from django.contrib.auth.models import User
 class UserProfile(models.Model):
@@ -24,12 +24,7 @@ admin.site.unregister(User)
 admin.site.register(User, CustomUserAdmin)
 复制代码
  
-
- 
-
- 
-
-方式2，AbstractUser
+# 方式2，AbstractUser
 
 复制代码
 from django.contrib.auth.models import AbstractUser
