--- a/devops/06.kubernetes/10.开发指南/python/7.create_namespace.md
+++ b/devops/06.kubernetes/10.开发指南/python/7.create_namespace.md
@@ -1,4 +1,7 @@
-https://github.com/kubernetes-client/python/blob/master/kubernetes/docs/CoreV1Api.md#create_namespace
+1. https://github.com/kubernetes-client/python/blob/master/kubernetes/docs/CoreV1Api.md#create_namespace
+2. create namespace · Issue #613 · kubernetes-client/python https://github.com/kubernetes-client/python/issues/613
+
+kubernetes_client.create_namespace(client.V1Namespace(metadata=client.V1ObjectMeta(name=namespace)))
 
 ```py
 from __future__ import print_function
