--- a/program/02.python/03.机器学习/01.机器学习基础/01.机器学习的主要任务.md
+++ b/program/02.python/03.机器学习/01.机器学习基础/01.机器学习的主要任务.md
@@ -2,7 +2,7 @@
 
 1. 监督学习Supervised Learning
     1. 分类问题Classification。类别是离散的
-    2. 回归问题Regression。预测的目标是连续变量
+    2. 回归问题Regression。主要用于预测数值型数据，预测的目标是连续变量
 2. 无监督学习Unsupervised Learning
     1. 数据降维Dimensionality。对事物的特性进行压缩和筛选
     2. 聚类问题Clustering。把相似的数据样本划分为一个簇
