--- a/program/02.python/01.python基础/22.常用库/string/2.Python字符串操作.md
+++ b/program/02.python/01.python基础/22.常用库/string/2.Python字符串操作.md
@@ -241,4 +241,12 @@ sStr1 = 'ab,cde,fgh,ijk'
 sStr2 = ','
 sStr1 = sStr1[sStr1.find(sStr2) + 1:]
 print sStr1
+
+### 17. split
+txt = "Google#Runoob#Taobao#Facebook"
+# 第二个参数为 1，返回两个参数列表
+x = txt.split("#", 1)
+# ['Google', 'Runoob#Taobao#Facebook']
+txt.split("#")[-1]
+# Facebook
 ```
