--- a/program/02.python/01.python基础/18.Django/07.RESTFramework/03.权限/01.Django REST framework基础：认证、权限、限制.md
+++ b/program/02.python/01.python基础/18.Django/07.RESTFramework/03.权限/01.Django REST framework基础：认证、权限、限制.md
@@ -4,12 +4,9 @@ Django REST framework基础：认证、权限、限制 - Q1mi - 博客园 https:
 身份验证是将传入请求与一组标识凭据（例如请求来自的用户或其签名的令牌）相关联的机制。然后 权限 和 限制 组件决定是否拒绝这个请求。
 
 简单来说就是：
-
-认证确定了你是谁
-
-权限确定你能不能访问某个接口
-
-限制确定你访问某个接口的频率
+1. 认证确定了你是谁
+2. 权限确定你能不能访问某个接口
+3. 限制确定你访问某个接口的频率
 
 # 2. 认证
 REST framework 提供了一些开箱即用的身份验证方案，并且还允许你实现自定义方案。
