--- a/program/02.python/03.机器学习/15.文本分析/18.情感分析/11.NLPIR/04.解决 NLPIR （中科院分词） License 过期问题.md
+++ b/program/02.python/03.机器学习/15.文本分析/18.情感分析/11.NLPIR/04.解决 NLPIR （中科院分词） License 过期问题.md
@@ -22,6 +22,7 @@ E:\code\URLClassifier\Data\NLPIR.user Not valid license or your license expired!
 
 LicenseChecker.java
 
+```java
 import com.sun.jna.Native;
  
 /**
@@ -69,7 +70,7 @@ NlPIRIniter.java
 class NlPIRIniter {
 	// license update url
 	public static final String latestLicenseUrl = "https://github.com/NLPIR-team/NLPIR/raw/master" +
-<span style="white-space:pre">		</span>"/License/license%20for%20a%20month/NLPIR-ICTCLAS%E5%88%86%E8%AF%8D%E7%B3%BB%E7%BB%9F%E6%8E%88%E6%9D%83/NLPIR.user";
+		"/License/license%20for%20a%20month/NLPIR-ICTCLAS%E5%88%86%E8%AF%8D%E7%B3%BB%E7%BB%9F%E6%8E%88%E6%9D%83/NLPIR.user";
  
 	/**
 	 * initialization NLPIR (handle license expired problem)
@@ -100,9 +101,6 @@ class NlPIRIniter {
 		throw new Exception(instance.NLPIR_GetLastErrorMsg());
 	}
 }
-
+```
 
 这样 NLPIR 分词的 License 问题算是解决了。
-————————————————
-版权声明：本文为CSDN博主「loyopp」的原创文章，遵循 CC 4.0 BY-SA 版权协议，转载请附上原文出处链接及本声明。
-原文链接：https://blog.csdn.net/loyopp/article/details/50747859
